# rust-claude-codes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build_examples.sh  claude.md  setup_hooks.sh
.github/workflows/: ci.yml  feature-matrix.yml
claude-codes/: CHANGELOG.md  Cargo.toml  README.md  build_examples.sh  format_test_cases.sh  run_integration_tests.sh
claude-codes/examples/: async_client.rs  basic_repl.rs  sync_client.rs
claude-codes/src/: client_async.rs  client_sync.rs  error.rs  lib.rs  protocol.rs  tool_inputs.rs  types.rs
claude-codes/src/io/: claude_input.rs  claude_output.rs  content_blocks.rs  control.rs  errors.rs  mcp.rs  message_types.rs  rate_limit.rs  result.rs
claude-codes/test_cases/failed_deserializations/: case_result_success.json  failed_250823_195537_941.json  failed_250823_201850_516.json  sample_unknown_type.json.example
claude-codes/test_cases/tool_use_captures/: tool_msg_2.json  tool_msg_4.json  tool_msg_7.json  tool_msg_8.json  tool_msg_9.json  tool_result_structured.json
claude-codes/tests/: deserialization_tests.rs  integration_tests.rs  tool_input_tests.rs
codex-codes/: CHANGELOG.md  Cargo.toml  README.md
codex-codes/examples/: async_client.rs  basic_repl.rs  sync_client.rs
codex-codes/src/: cli.rs  client_async.rs  client_sync.rs  error.rs  jsonrpc.rs  lib.rs  protocol.rs  version.rs
codex-codes/src/io/: events.rs  items.rs  mod.rs  options.rs
codex-codes/test_cases/captures/: failed_command.jsonl  file_change.jsonl  file_create.jsonl  hello_world.jsonl  list_files.jsonl  multi_command.jsonl
codex-codes/tests/: integration_tests.rs  live_client_tests.rs
examples/: async_client.rs  basic_repl.rs  json_mode.rs  sync_client.rs
src/: cli.rs  client_async.rs  client_sync.rs  error.rs  io.rs  lib.rs  messages.rs  protocol.rs  tool_inputs.rs  types.rs  version.rs
src/client/: async.rs  mod.rs  sync.rs
src/io/: claude_input.rs  claude_output.rs  control.rs  errors.rs  message_types.rs  mod.rs  rate_limit.rs
test_cases/failed_deserializations/: .gitkeep  failed_250823_195425_123.json  failed_250823_201957_107.json
test_cases/tool_use_captures/: assistant_with_usage.json  tool_msg_0.json  tool_msg_1.json  tool_msg_10.json  tool_msg_11.json  tool_msg_2.json  tool_msg_3.json  tool_msg_4.json  tool_msg_5.json  tool_msg_6.json  tool_msg_7.json  tool_msg_8.json  tool_msg_9.json  tool_result_error.json  tool_result_multi_text.json
tests/: README.md  deserialization_tests.rs  integration_tests.rs  tool_input_tests.rs
