[package]
name = "claude-codes"
version = "0.0.1"
edition = "2021"
authors = ["Matthew Goodman <d3a6d0cec0c16f3e@inboxnegative.com>"]
description = "A tightly typed Rust interface for the Claude Code JSON protocol"
documentation = "https://docs.rs/claude-codes"
homepage = "https://github.com/meawoppl/rust-claude-codes"
repository = "https://github.com/meawoppl/rust-claude-codes"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["claude", "ai", "json", "protocol", "api"]
categories = ["api-bindings", "encoding", "parsing"]

[[bin]]
name = "claude-test"
path = "src/bin/claude-test.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
env_logger = "0.11.8"
